--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -18,17 +18,17 @@
     <h1> Our Menu </h1>
 
     <div class="card">
-        <p class="Chicken">Chicken</p>
+        <h3 class="cardTitle Chicken">Chicken</h3>
         lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
 
     <div class="card">
-        <p class="card-title">Beef</p>
+        <h3 class="cardTitle Beef">Beef</h3>
         lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
     
     <div class="card">
-        <p class="card-title">Sushi</p>
+        <h3 class="cardTitle Sushi">Sushi</h3>
         lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
 
