--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html>
-
-
-<head>   <!-- naslov -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+<head>   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>ZADATAK 1</title>  <!-- naslov na tabu, mora postojati -->
+    <title>Our Menu</title>  <!-- Updated title -->
 </head>
 
-
-
 <body>
-    <h1> Our Menu </h1>
-    <div class="card">
-        <span class="cardTitle Chicken">Chicken</span>
-        lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
+    <div class="container">
+        <h1>Our Menu</h1>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12 card">
+                <span class="cardTitle Chicken">Chicken</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
 
-    <div class="card">
-        <span class="cardTitle Beef">Beef</span>
-        lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <div class="col-lg-4 col-md-6 col-sm-12 card">
+                <span class="cardTitle Beef">Beef</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 card">
+                <span class="cardTitle Sushi">Sushi</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
     </div>
-    
-    <div class="card">
-        <span class="cardTitle Sushi">Sushi</span>
-        lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
-    
 </body>
 </html>
